...
                        <viewLayoutGuide key="safeArea" id="aCM-Ic-a0t"/>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="lGD-N9-J5N" appends="YES" id="iLn-hG-mz0"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" id="pn2-wd-MTq">
                        <barButtonItem key="leftBarButtonItem" title="Settings" image="nav_bar_ic_settings" id="568-fd-IXP">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <segue destination="QRF-5W-cM2" kind="show" identifier="SettingsSegue" id="T1o-Qt-bQd"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add new" image="nav_bar_ic_add" id="Whw-p0-HOP">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="addNewTaskBarButtonItemTap:" destination="Unk-GL-1OL" id="ezr-jw-hfL"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tmZ-e0-6d0" id="hJm-uC-Nge">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wNb-p2-miF">
                                                    <rect key="frame" x="10" y="6" width="355" height="38"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <textInputTraits key="textInputTraits"/>
                                                    <connections>
                                                        <outlet property="delegate" destination="51s-32-7yY" id="yk1-ri-tcJ"/>
...
                                        <rect key="frame" x="0.0" y="100" width="375" height="50"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fjs-OD-5hI" id="Spz-sI-5VK">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tap to select date..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YPm-vl-txS">
                                                    <rect key="frame" x="10" y="6" width="355" height="38"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <textInputTraits key="textInputTraits"/>
                                                    <connections>
                                                        <outlet property="delegate" destination="51s-32-7yY" id="btg-fA-th7"/>
...
                        <barButtonItem key="leftBarButtonItem" title="Done" style="done" id="HiP-Mf-BkC">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="doneBarButtonTouchUpInside:" destination="51s-32-7yY" id="sTP-y4-F7y"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Delete" id="ptA-GZ-X9H">
                            <color key="tintColor" red="0.91961714670000005" green="0.21422677330000001" blue="0.2214575526" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="deleteBarButtonItemTap:" destination="51s-32-7yY" id="338-U6-meE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
