...

    func setDateLabet(text: String) {
        dateTextField.text = text
    }

    func setEmptyCategoryPlaceholder() {
        categoryLabel.text = "Tap to select a category..."
        categoryLabel.textColor = #colorLiteral(red: 0.501960814, green: 0.501960814, blue: 0.501960814, alpha: 1)
    }

    override func viewDidLoad() {
        super.viewDidLoad()

...
